--- a/src/index.html
+++ b/src/index.html
@@ -2,23 +2,9 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Blockly Demo: Fixed Blockly</title>
-  <script src="./blockly/blockly_compressed.js"></script>
-  <script src="./blockly/blocks_compressed.js"></script>
-  <script src="./blocky/msg/js/en.js"></script>
-  <style>
-    body {
-      background-color: #fff;
-      font-family: sans-serif;
-    }
-    h1 {
-      font-weight: normal;
-      font-size: 140%;
-    }
-  </style>
+  <title>Playground</title>
 </head>
 <body>
-
   <div id="blocklyDiv" style="height: 480px; width: 600px;"></div>
 
   <xml id="toolbox" style="display: none">
@@ -33,12 +19,11 @@
     <block type="text_print"></block>
   </xml>
 
-  <script>
+  <!-- <script>
     var demoWorkspace = Blockly.inject('blocklyDiv',
         {media: '../../media/',
          toolbox: document.getElementById('toolbox')});
-    console.info("???")
-  </script>
+  </script> -->
 
 </body>
 </html>
